fixed offcanvas and overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
 
 body{
     background-color: #000a1f !important;
+    overflow-x: hidden;
 }
 
 .landingSectionTitle{
